kubernetes/orion-ld/mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    name: mongodb-rs
spec:
  replicas: 1
  selector:
    matchLabels: 
      name: mongodb-rs
  strategy:
    type: RollingUpdate 
  template:
    metadata:
      name: mongo-db
      labels:
        name: mongodb-rs
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-node-03
      containers:
        - name: mongo-db
          image: mongo:5.0
          args: ["--nojournal"]
          volumeMounts:
            - name: mongodb-volume
              mountPath: /data
      volumes:
        - name: mongodb-volume
          hostPath:
            path: /data/mongodb-data
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    name: mongodb-rs
spec:
  type: ClusterIP
  selector:
    name: mongodb-rs
  ports:
    - name: mongodb
      port: 27017
      protocol: TCP
