kubernetes/orion-ld/orion-ld-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orion-ld-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: orion.xip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: orion-ld-service
            port: 
              number: 1026
